tests/runnable/test_17_multifuncs.hd
// test 17 : Has multiple functions
// Parser / Lexer Valid: Yes

char _foo()
{
    print "foo";
    return 'a';
}

void main()
{
    char x;
    x = _foo();
    print x;
    print 16;
}