tests/invalid/test_28_no_func_name.hd
// test 28 : no function name
// Parser / Lexer Valid: Yes

void () {}